# ChangeLog for sys-apps/coreutils
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.46 2003/11/18 21:59:38 pebenito Exp $

*coreutils-5.0.91-r1 (18 Nov 2003)

  18 Nov 2003; Chris PeBenito <pebenito@gentoo.org>
  coreutils-5.0.91-r1.ebuild:
  Bump to update SELinux patch. The old patch had a rare segfault/hang problem
  in ls. Otherwise, same as -r0.

  04 Nov 2003; Brad House <brad_mssw@gentoo.org> coreutils-5.0.91.ebuild:
  mark stable on amd64

  03 Nov 2003; Daniel Robbins <drobbins@gentoo.org> all of 'em: added missing
  RDEPEND so they don't default to DEPEND.
  
  02 Nov 2003; Chris PeBenito <pebenito@gentoo.org> coreutils-5.0-r4.ebuild:
  Missed removing SELinux patch from 5.0-r4

  28 Oct 2003; Chris PeBenito <pebenito@gentoo.org> coreutils-5.0-r1.ebuild,
  coreutils-5.0-r2.ebuild, coreutils-5.0-r3.ebuild, coreutils-5.0.91.ebuild:
  Switch SELinux patch from old API to new API.

  01 Oct 2003; Tavis Ormandy <taviso@gentoo.org> coreutils-5.0.91.ebuild:
  missing help2man dependency

  28 Sep 2003; Chris PeBenito <pebenito@gentoo.org> coreutils-5.0.91.ebuild:
  Fix selinux patch for 5.0.91.

*coreutils-5.0.91 (28 Sep 2003)

  28 Sep 2003; Martin Schlemmer <azarah@gentoo.org> coreutils-5.0.91.ebuild:
  Update version. I ported the ACL patches, except for the i18n one, as it gets
  messy, and there are a lot of Makefile breakage, and also what might be
  upstream fixes for the same thing. I thus rather think somebody that know a
  bit more about locale and such that can test it should do this. Same thing for
  the SELINUX patch - its a lot of small breakages and is tedious - I thought
  getting this in so far should motivate somebody with more time than me :)

  26 Sep 2003; Bartosch Pixa <darkspecter@gentoo.org> coreutils-5.0-r4.ebuild:
  set ppc in keywords

*coreutils-4.5.11-r1 (24 Sep 2003)

  24 Sep 2003; Seemant Kulleen <seemant@gentoo.org>