@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/coreutils-5.0.91-r1.ebuild,v 1.1 2003/11/18 21:59:38 pebenito Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/coreutils-5.0.91-r1.ebuild,v 1.2 2003/11/19 19:19:03 mholzer Exp $
 
 inherit eutils flag-o-matic
 
@@ -23,7 +23,7 @@ KEYWORDS="~x86 amd64 ppc ~sparc alpha hppa ~arm ~mips ia64"
 
 DEPEND="virtual/glibc
 	>=sys-apps/portage-2.0.49
-	sys-devel/automake
+	>=sys-devel/automake-1.7.6
 	sys-devel/autoconf
 	sys-apps/help2man
 	nls? ( sys-devel/gettext )
