@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/coreutils
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.46 2003/11/18 21:59:38 pebenito Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.47 2003/11/19 19:19:03 mholzer Exp $
+
+  19 Nov 2003; Martin Holzer <mholzer@gentoo.org> coreutils-5.0.91-r1.ebuild,
+  coreutils-5.0.91.ebuild:
+  adding version number to automake. Closes #33836.
 
 *coreutils-5.0.91-r1 (18 Nov 2003)
 
